Replace new Integer/Float/Long/Double with valueOf methods