@@ -26,7 +26,7 @@ public class ObjectStoreWriterDummyImplTest extends TestCase {
 
         InterMineObject o2 =
             (InterMineObject) DynamicUtil.createObject(Collections.singleton(Company.class));
-        o2.setId(new Integer(1));
+        o2.setId(Integer.valueOf(1));
         osw.store(o2);
 
         InterMineObject o3 =
@@ -35,7 +35,7 @@ public class ObjectStoreWriterDummyImplTest extends TestCase {
 
         InterMineObject o4 =
             (InterMineObject) DynamicUtil.createObject(Collections.singleton(Company.class));
-        o4.setId(new Integer(100));
+        o4.setId(Integer.valueOf(100));
         // store twice to make sure we get only one copy
         osw.store(o4);
         osw.store(o4);
@@ -51,16 +51,16 @@ public class ObjectStoreWriterDummyImplTest extends TestCase {
 
         assertEquals(5, storedObjects.size());
 
-        assertTrue(storedObjects.get(new Integer(0)) == o1);
-        assertTrue(((Company) storedObjects.get(new Integer(0))).getId().equals(new Integer(0)));
-        assertTrue(storedObjects.get(new Integer(1)) == o2);
-        assertTrue(((Company) storedObjects.get(new Integer(1))).getId().equals(new Integer(1)));
-        assertTrue(storedObjects.get(new Integer(2)) == o3);
-        assertTrue(((Company) storedObjects.get(new Integer(2))).getId().equals(new Integer(2)));
-        assertTrue(storedObjects.get(new Integer(3)) == o5);
-        assertTrue(((Company) storedObjects.get(new Integer(3))).getId().equals(new Integer(3)));
-        assertTrue(storedObjects.get(new Integer(100)) == o4);
-        assertTrue(((Company) storedObjects.get(new Integer(100))).getId().equals(new Integer(100)));
+        assertTrue(storedObjects.get(Integer.valueOf(0)) == o1);
+        assertTrue(((Company) storedObjects.get(Integer.valueOf(0))).getId().equals(new Integer(0)));
+        assertTrue(storedObjects.get(Integer.valueOf(1)) == o2);
+        assertTrue(((Company) storedObjects.get(Integer.valueOf(1))).getId().equals(new Integer(1)));
+        assertTrue(storedObjects.get(Integer.valueOf(2)) == o3);
+        assertTrue(((Company) storedObjects.get(Integer.valueOf(2))).getId().equals(new Integer(2)));
+        assertTrue(storedObjects.get(Integer.valueOf(3)) == o5);
+        assertTrue(((Company) storedObjects.get(Integer.valueOf(3))).getId().equals(new Integer(3)));
+        assertTrue(storedObjects.get(Integer.valueOf(100)) == o4);
+        assertTrue(((Company) storedObjects.get(Integer.valueOf(100))).getId().equals(new Integer(100)));
     }
 
     public void testStoreTransaction() throws Exception {
@@ -76,7 +76,7 @@ public class ObjectStoreWriterDummyImplTest extends TestCase {
 
         InterMineObject o2 =
             (InterMineObject) DynamicUtil.createObject(Collections.singleton(Company.class));
-        o2.setId(new Integer(1));
+        o2.setId(Integer.valueOf(1));
         osw.store(o2);
 
         InterMineObject o3 =
@@ -93,12 +93,12 @@ public class ObjectStoreWriterDummyImplTest extends TestCase {
 
         assertEquals(3, storedObjects.size());
 
-        assertTrue(storedObjects.get(new Integer(0)) == o1);
-        assertTrue(((Company) storedObjects.get(new Integer(0))).getId().equals(new Integer(0)));
-        assertTrue(storedObjects.get(new Integer(1)) == o2);
-        assertTrue(((Company) storedObjects.get(new Integer(1))).getId().equals(new Integer(1)));
-        assertTrue(storedObjects.get(new Integer(2)) == o3);
-        assertTrue(((Company) storedObjects.get(new Integer(2))).getId().equals(new Integer(2)));
+        assertTrue(storedObjects.get(Integer.valueOf(0)) == o1);
+        assertTrue(((Company) storedObjects.get(Integer.valueOf(0))).getId().equals(new Integer(0)));
+        assertTrue(storedObjects.get(Integer.valueOf(1)) == o2);
+        assertTrue(((Company) storedObjects.get(Integer.valueOf(1))).getId().equals(new Integer(1)));
+        assertTrue(storedObjects.get(Integer.valueOf(2)) == o3);
+        assertTrue(((Company) storedObjects.get(Integer.valueOf(2))).getId().equals(new Integer(2)));
 
 
 
@@ -109,7 +109,7 @@ public class ObjectStoreWriterDummyImplTest extends TestCase {
 
         InterMineObject o4 =
             (InterMineObject) DynamicUtil.createObject(Collections.singleton(Company.class));
-        o4.setId(new Integer(100));
+        o4.setId(Integer.valueOf(100));
         osw.store(o4);
 
 
@@ -132,11 +132,11 @@ public class ObjectStoreWriterDummyImplTest extends TestCase {
 
         assertEquals(3, storedObjects.size());
 
-        assertTrue(storedObjects.get(new Integer(0)) == o1);
-        assertTrue(((Company) storedObjects.get(new Integer(0))).getId().equals(new Integer(0)));
-        assertTrue(storedObjects.get(new Integer(1)) == o2);
-        assertTrue(((Company) storedObjects.get(new Integer(1))).getId().equals(new Integer(1)));
-        assertTrue(storedObjects.get(new Integer(2)) == o3);
-        assertTrue(((Company) storedObjects.get(new Integer(2))).getId().equals(new Integer(2)));
+        assertTrue(storedObjects.get(Integer.valueOf(0)) == o1);
+        assertTrue(((Company) storedObjects.get(Integer.valueOf(0))).getId().equals(new Integer(0)));
+        assertTrue(storedObjects.get(Integer.valueOf(1)) == o2);
+        assertTrue(((Company) storedObjects.get(Integer.valueOf(1))).getId().equals(new Integer(1)));
+        assertTrue(storedObjects.get(Integer.valueOf(2)) == o3);
+        assertTrue(((Company) storedObjects.get(Integer.valueOf(2))).getId().equals(new Integer(2)));
     }
 }
