@@ -30,6 +30,6 @@ public class WithNotXmlObjectStoreWriterInterMineImplTest extends ObjectStoreWri
 
         Assert.assertFalse(writer.isInTransaction());
         // Now try and do something normal.
-        writer.getObjectById(new Integer(2));
+        writer.getObjectById(Integer.valueOf(2));
     }
 }
