@@ -42,9 +42,9 @@ public class QueryCreatorTest extends QueryTestCase
         q.addFrom(qc);
         q.addToSelect(qc);
         q.setConstraint(new SimpleConstraint(new QueryField(qc, "id"), ConstraintOp.EQUALS,
-                    new QueryValue(new Integer(5))));
+                    new QueryValue(Integer.valueOf(5))));
 
-        assertEquals(q, QueryCreator.createQueryForId(new Integer(5), InterMineObject.class));
+        assertEquals(q, QueryCreator.createQueryForId(Integer.valueOf(5), InterMineObject.class));
     }
 
 
@@ -101,7 +101,7 @@ public class QueryCreatorTest extends QueryTestCase
         cs1.addConstraint(new SimpleConstraint(qf1, ConstraintOp.EQUALS, new QueryValue("Employee 1")));
 
         QueryField qf2 = new QueryField(qcEmployee, "age");
-        cs1.addConstraint(new SimpleConstraint(qf2, ConstraintOp.EQUALS, new QueryValue(new Integer(20))));
+        cs1.addConstraint(new SimpleConstraint(qf2, ConstraintOp.EQUALS, new QueryValue(Integer.valueOf(20))));
 
         QueryReference qr1 = new QueryObjectReference(qcEmployee, "address");
         cs1.addConstraint(new ContainsConstraint(qr1, ConstraintOp.CONTAINS, qcAddress));
@@ -183,7 +183,7 @@ public class QueryCreatorTest extends QueryTestCase
         cs1.addConstraint(new SimpleConstraint(qf1, ConstraintOp.EQUALS, new QueryValue("Employee 1")));
 
         QueryField qf2 = new QueryField(qcEmployee, "age");
-        cs1.addConstraint(new SimpleConstraint(qf2, ConstraintOp.EQUALS, new QueryValue(new Integer(20))));
+        cs1.addConstraint(new SimpleConstraint(qf2, ConstraintOp.EQUALS, new QueryValue(Integer.valueOf(20))));
 
         QueryReference qr1 = new QueryObjectReference(qcEmployee, "address");
         cs1.addConstraint(new ContainsConstraint(qr1, ConstraintOp.CONTAINS, qcAddress));
