@@ -1265,7 +1265,7 @@ public class QueryTest extends TestCase
         String sql = "SELECT DISTINCT a1_.id AS a1_id, a2_.id AS a2_id, a3_.id AS a3_id, a2_.intermine_start AS orderbyfield0, a1_.briefDescription AS orderbyfield1, a1_.description AS orderbyfield2, a1_.id AS orderbyfield3, a2_.intermine_end AS orderbyfield4, a3_.shortName AS orderbyfield5 FROM Gene AS a1_, Location AS a2_, Organism AS a3_, Chromosome AS a4_ WHERE a1_.chromosomeLocationId = a2_.id AND a1_.organismId = a3_.id AND ((a2_.locatedOnId = a4_.id AND a4_.primaryIdentifier = 'MAL1' AND (a2_.featureId = a2_.featureId AND a2_.intermine_start > 1 AND a2_.intermine_end < 10001)) OR (a2_.locatedOnId = a4_.id AND a4_.primaryIdentifier = 'MAL1' AND (a2_.featureId = a2_.featureId AND a2_.intermine_start > 150001 AND a2_.intermine_end < 160001))) ORDER BY a2_.intermine_start, a1_.briefDescription, a1_.description, a1_.id, a2_.intermine_end, a3_.shortName, a2_.id, a3_.id LIMIT 5000";
         try {
             // set query parse timeout of 1ms, will throw timeout exception
-            Query q = new Query(sql, new Long(1));
+            Query q = new Query(sql, Long.valueOf(1));
             fail("Expected QueryParseTimeoutException");
         } catch (QueryParseTimeoutException e) {
         }
